--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="tendies.js" />
 </head>
 
 <body>
   <h1>Life is like a chicken tender. Hard and crunchy on the outside, but soft and tender in the middle.</h1>
   <div class="author">-Rhett</div>
-  <img src="chickentenders.jpg" alt="Chicken Tenders" style="padding-left:35%">
+  <img id="tendie" src="chickentenders.jpg" alt="Chicken Tenders" style="padding-left:35%">
   <script src="script.js"></script>
 </body>
 
