--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src="tendies.js" />
 </head>
 
 <body>
@@ -14,6 +13,7 @@
   <div class="author">-Rhett</div>
   <img id="tendie" src="chickentenders.jpg" alt="Chicken Tenders" style="padding-left:35%">
   <script src="script.js"></script>
+  <script src="tenders.js" />
 </body>
 
 </html>
