--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <h1>Life is like a chicken tender. Hard and crunchy on the outside, but soft and tender in the middle.</h1>
-  <div class="author">-Rhett</div>
+  <div class="author">- Rhett</div>
   <img id="tendie" src="chickentenders.jpg" alt="Chicken Tenders" style="padding-left:35%">
   <script src="script.js"></script>
-  <script src="tenders.js" />
+  <script src="https://abigaillightle.github.io/chickentender/tenders.js" />
 </body>
 
 </html>
