--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
 </head>
 
 <body>
-  <h1>Life is like a chicken tender. Hard and crunchy on the outside, but soft and tender in the middle.</h1>
-  <div class="author">-Rhett</div>
-  <img id="tendie" src="chickentenders.jpg" alt="Chicken Tenders" style="padding-left:35%">
-  <script src="https://abigaillightle.github.io/chickentender/tenders.js" />
+  <div class="side-nav">
+    <ul class="nav-links">
+      <li><a href="/">Home</a></li>
+      <li class="active"><a href="/chickentender">Chicken Tendies!</a></li>
+      <li><a href="/makingmenervous">You're making me nervous!</a></li>
+    </ul>
+  </div>
+  <div class="content">
+    <h1>Life is like a chicken tender. Hard and crunchy on the outside, but soft and tender in the middle.</h1>
+    <div class="author">-Rhett</div>
+    <img id="tendie" src="chickentenders.jpg" alt="Chicken Tenders" style="padding-left:35%">
+  </div>
 </body>
 
 </html>
