--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Life is like a chicken tender</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="https://abigaillightle.github.com/sidenav.css" rel="stylesheet">
 </head>
 
 <body>
